--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,7 +68,8 @@ FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C
 LastLevel=/Game/TestMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Char/Knight/ABP_KnightCharacter.ABP_KnightCharacter
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -398,7 +399,7 @@ ContentBrowserTab1.CurrentViewType=1
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 BP_KnightCharacter_C=
 Character=
 Pawn=
