Ch-ch-ch-changesssss

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,7 +59,7 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 
 [DetailCustomWidgetExpansion]
 BP_KnightCharacter_C=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
-K2Node_VariableGet=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
+K2Node_VariableGet=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
@@ -68,8 +68,7 @@ FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C
 LastLevel=/Game/TestMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Char/Knight/ABP_KnightCharacter.ABP_KnightCharacter
+CleanShutdown=True
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -340,6 +339,15 @@ SpringArmComponent.ComponentReplication=True
 SpringArmComponent.Activation=True
 SpringArmComponent.Cooking=True
 SpringArmComponent.Events=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_TwoWayBlend.Settings=True
+AnimGraphNode_TwoWayBlend.Option=True
+AnimGraphNode_ApplyMeshSpaceAdditive.Settings=True
+AnimGraphNode_ApplyMeshSpaceAdditive.Performance=True
+AnimGraphNode_ApplyAdditive.Settings=True
+AnimGraphNode_ApplyAdditive.Performance=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -399,7 +407,7 @@ ContentBrowserTab1.CurrentViewType=1
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object=
 BP_KnightCharacter_C=
 Character=
 Pawn=
