Le cris de blending de marde

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,7 +68,7 @@ FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C
 LastLevel=/Game/TestMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
