--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -403,6 +403,7 @@ ContentBrowserTab1.CurrentViewType=1
 /Game/Char/Knight/Character_PhysicsAsset.Character_PhysicsAsset=1
 /Game/Char/Knight/Animations/Idle.Idle=1
 /Game/Char/Knight/jogsprint.jogsprint=1
+/Game/Char/Knight/Animations/Throw.Throw=1
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
