master give me ur sparm

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -759,6 +759,9 @@ EditorKeyboardShortcutSettings.PhysicsAssetEditor=True
 EditorKeyboardShortcutSettings.SkeletonTree=True
 EditorKeyboardShortcutSettings.StaticMeshViewportLODCmd=True
 EditorKeyboardShortcutSettings.StaticMeshEditor=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -816,9 +819,8 @@ AssetDialog.CurrentViewType=1
 /Game/Char/Knight/Character_PhysicsAsset.Character_PhysicsAsset=1
 /Game/Char/Knight/Animations/Idle.Idle=1
 /Game/Char/Knight/jogsprint.jogsprint=1
-<<<<<<< HEAD
 /Game/Char/Knight/Animations/Throw.Throw=1
-=======
+None=======
 /Game/AI/AI_piggy.AI_Piggy=1
 /Game/AI/Behavior.Behavior=1
 /Game/AI/aiBlackboard.aiBlackboard=1
@@ -832,7 +834,6 @@ AssetDialog.CurrentViewType=1
 /Game/Mat_ground.Mat_ground=1
 /Game/PolygonKnights/Meshes/Characters/SK_Character_Knight_03_PhysicsAsset.SK_Character_Knight_03_PhysicsAsset=1
 /Game/Mat_ground1.Mat_ground1=1
->>>>>>> 2701c1d2997dfd5a1d15da3616548deb21e2c920
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -1542,6 +1543,8 @@ AnimationEditor.TimeStamp=2018.06.25-15.32.48
 AnimationEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2018.06.25-15.32.58
 PhysicsAssetEditor.LastCompileMethod=Unknown
+EnvironmentQueryEditor.TimeStamp=2018.06.25-15.32.53
+EnvironmentQueryEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorExperimentalSettings]
 bProceduralFoliage=False
