MainMenu+ModifSurL'AICochon

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=67C534004800FAB9E5ECBA957C8C7122
 ProjectName=Third Person BP Game Template
+CompanyName=TiteZouneStudio
+ProjectVersion=0.0.0.1
+
