--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -59,14 +59,14 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 
 [DetailCustomWidgetExpansion]
 BP_KnightCharacter_C=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
-K2Node_VariableGet=
+K2Node_VariableGet=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [EditorStartup]
-LastLevel=/Game/TestMap
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -762,6 +762,24 @@ EditorKeyboardShortcutSettings.StaticMeshEditor=True
 AnimGraphNode_BlendSpacePlayer.Coordinates=True
 AnimGraphNode_BlendSpacePlayer.Settings=True
 AnimGraphNode_BlendSpacePlayer.Relevancy=True
+REINST_BP_KnightCharacter_C_90.None=True
+REINST_BP_KnightCharacter_C_90.Tick=True
+REINST_BP_KnightCharacter_C_90.Character=True
+REINST_BP_KnightCharacter_C_90.Camera=True
+REINST_BP_KnightCharacter_C_90.Pawn=True
+REINST_BP_KnightCharacter_C_90.Rendering=True
+REINST_BP_KnightCharacter_C_90.Replication=True
+REINST_BP_KnightCharacter_C_90.Input=True
+REINST_BP_KnightCharacter_C_90.Actor=True
+REINST_BP_KnightCharacter_C_98.None=True
+REINST_BP_KnightCharacter_C_98.Tick=True
+REINST_BP_KnightCharacter_C_98.Character=True
+REINST_BP_KnightCharacter_C_98.Camera=True
+REINST_BP_KnightCharacter_C_98.Pawn=True
+REINST_BP_KnightCharacter_C_98.Rendering=True
+REINST_BP_KnightCharacter_C_98.Replication=True
+REINST_BP_KnightCharacter_C_98.Input=True
+REINST_BP_KnightCharacter_C_98.Actor=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -834,6 +852,7 @@ None=======
 /Game/Mat_ground.Mat_ground=1
 /Game/PolygonKnights/Meshes/Characters/SK_Character_Knight_03_PhysicsAsset.SK_Character_Knight_03_PhysicsAsset=1
 /Game/Mat_ground1.Mat_ground1=1
+/Game/Char/Knight/Character_Anim.Character_Anim=1
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -852,7 +871,7 @@ BlackboardData="\"Object.Blackboard\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+ActorComponent=
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
