--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 
 *.log
+Saved/Config/WorldState/1208880402.json
+Saved/Config/Windows/EditorPerProjectUserSettings.ini
+Saved/Backup/TestMap_BuiltData_2018-06-26-11-24-43.uasset
+Saved/Backup/TestMap_2018-06-26-11-24-43.umap
+Saved/Backup/AI_piggy_2018-06-26-11-29-27.uasset
+Saved/Backup/AI_piggy_2018-06-26-11-23-44.uasset
+Saved/Autosaves/PackageRestoreData.json
+Content/TestMap_BuiltData.uasset
+Content/TestMap.umap
+Content/AI/AI_piggy.uasset
