--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -66,10 +66,10 @@ FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/TestMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
