--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -64,6 +64,9 @@ BlendSpace=BlendSpace.Axis Settings.Vertical Axis,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+CameraComponent=CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Misc,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Camera,CameraComponent.Lens.Lens|ExposureAdvanced,CameraComponent.Lens.Lens|Exposure,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,
+K2Node_VariableSet=
+BoolProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 
 [EditorStartup]
 LastLevel=/Game/TestMap
@@ -780,6 +783,82 @@ REINST_BP_KnightCharacter_C_98.Rendering=True
 REINST_BP_KnightCharacter_C_98.Replication=True
 REINST_BP_KnightCharacter_C_98.Input=True
 REINST_BP_KnightCharacter_C_98.Actor=True
+REINST_BP_KnightCharacter_C_27.None=True
+REINST_BP_KnightCharacter_C_27.Tick=True
+REINST_BP_KnightCharacter_C_27.Character=True
+REINST_BP_KnightCharacter_C_27.Camera=True
+REINST_BP_KnightCharacter_C_27.Pawn=True
+REINST_BP_KnightCharacter_C_27.Rendering=True
+REINST_BP_KnightCharacter_C_27.Replication=True
+REINST_BP_KnightCharacter_C_27.Input=True
+REINST_BP_KnightCharacter_C_27.Actor=True
+REINST_BP_KnightCharacter_C_41.None=True
+REINST_BP_KnightCharacter_C_41.Tick=True
+REINST_BP_KnightCharacter_C_41.Character=True
+REINST_BP_KnightCharacter_C_41.Camera=True
+REINST_BP_KnightCharacter_C_41.Pawn=True
+REINST_BP_KnightCharacter_C_41.Rendering=True
+REINST_BP_KnightCharacter_C_41.Replication=True
+REINST_BP_KnightCharacter_C_41.Input=True
+REINST_BP_KnightCharacter_C_41.Actor=True
+REINST_BP_KnightCharacter_C_51.None=True
+REINST_BP_KnightCharacter_C_51.Tick=True
+REINST_BP_KnightCharacter_C_51.Character=True
+REINST_BP_KnightCharacter_C_51.Camera=True
+REINST_BP_KnightCharacter_C_51.Pawn=True
+REINST_BP_KnightCharacter_C_51.Rendering=True
+REINST_BP_KnightCharacter_C_51.Replication=True
+REINST_BP_KnightCharacter_C_51.Input=True
+REINST_BP_KnightCharacter_C_51.Actor=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+CameraComponent.Physics=True
+REINST_BP_KnightCharacter_C_165.None=True
+REINST_BP_KnightCharacter_C_165.Tick=True
+REINST_BP_KnightCharacter_C_165.Character=True
+REINST_BP_KnightCharacter_C_165.Camera=True
+REINST_BP_KnightCharacter_C_165.Pawn=True
+REINST_BP_KnightCharacter_C_165.Rendering=True
+REINST_BP_KnightCharacter_C_165.Replication=True
+REINST_BP_KnightCharacter_C_165.Input=True
+REINST_BP_KnightCharacter_C_165.Actor=True
+REINST_BP_KnightCharacter_C_233.None=True
+REINST_BP_KnightCharacter_C_233.Tick=True
+REINST_BP_KnightCharacter_C_233.Character=True
+REINST_BP_KnightCharacter_C_233.Camera=True
+REINST_BP_KnightCharacter_C_233.Pawn=True
+REINST_BP_KnightCharacter_C_233.Rendering=True
+REINST_BP_KnightCharacter_C_233.Replication=True
+REINST_BP_KnightCharacter_C_233.Input=True
+REINST_BP_KnightCharacter_C_233.Actor=True
+REINST_BP_KnightCharacter_C_245.None=True
+REINST_BP_KnightCharacter_C_245.Tick=True
+REINST_BP_KnightCharacter_C_245.Character=True
+REINST_BP_KnightCharacter_C_245.Camera=True
+REINST_BP_KnightCharacter_C_245.Pawn=True
+REINST_BP_KnightCharacter_C_245.Rendering=True
+REINST_BP_KnightCharacter_C_245.Replication=True
+REINST_BP_KnightCharacter_C_245.Input=True
+REINST_BP_KnightCharacter_C_245.Actor=True
+REINST_BP_KnightCharacter_C_249.None=True
+REINST_BP_KnightCharacter_C_249.Tick=True
+REINST_BP_KnightCharacter_C_249.Character=True
+REINST_BP_KnightCharacter_C_249.Camera=True
+REINST_BP_KnightCharacter_C_249.Pawn=True
+REINST_BP_KnightCharacter_C_249.Rendering=True
+REINST_BP_KnightCharacter_C_249.Replication=True
+REINST_BP_KnightCharacter_C_249.Input=True
+REINST_BP_KnightCharacter_C_249.Actor=True
+K2Node_GetInputAxisValue.Input=True
+REINST_BP_KnightCharacter_C_265.None=True
+REINST_BP_KnightCharacter_C_265.Tick=True
+REINST_BP_KnightCharacter_C_265.Character=True
+REINST_BP_KnightCharacter_C_265.Camera=True
+REINST_BP_KnightCharacter_C_265.Pawn=True
+REINST_BP_KnightCharacter_C_265.Rendering=True
+REINST_BP_KnightCharacter_C_265.Replication=True
+REINST_BP_KnightCharacter_C_265.Input=True
+REINST_BP_KnightCharacter_C_265.Actor=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -813,7 +892,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Char/Knight
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -872,6 +951,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 ActorComponent=
+REINST_BP_KnightCharacter_C_121="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
