--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -33,8 +33,9 @@ LastExecutedLaunchName=COMPUTER
 LastExecutedPIEPreviewDevice=
 
 [MRU]
-MRUItem0=/Game/TestMap
-MRUItem1=/Game/ThirdPersonExampleMap
+MRUItem0=/Game/MainMenu/MainMenu
+MRUItem1=/Game/TestMap
+MRUItem2=/Game/ThirdPersonExampleMap
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -69,10 +70,10 @@ K2Node_VariableSet=
 BoolProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 
 [EditorStartup]
-LastLevel=/Game/TestMap
+LastLevel=/Game/MainMenu/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -892,7 +893,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Char/Knight
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1038,7 +1039,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/hc/Documents/Unreal Projects/LabrosseSux/LabrosseSux/Content
+UNR=C:/Users/hc/Documents/Unreal Projects/LabrosseSux/LabrosseSux/Content/MainMenu
 BRUSH=C:/Users/hc/Documents/Unreal Projects/LabrosseSux/LabrosseSux/Content/
 FBX=C:/Users/hc/Documents/Unreal Projects/LabrosseSux/LabrosseSux/Content/
 FBXAnim=C:/Users/hc/Documents/Unreal Projects/LabrosseSux/LabrosseSux/Content/
