--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -17,7 +17,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -31,10 +31,14 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@COMPUTER
 LastExecutedLaunchName=COMPUTER
 LastExecutedPIEPreviewDevice=
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=672,Y=0)
 
 [MRU]
-MRUItem0=/Game/MainMenu/MainMenu
-MRUItem1=/Game/TestMap
+MRUItem0=/Game/TestMap
+MRUItem1=/Game/MainMenu/MainMenu
 MRUItem2=/Game/ThirdPersonExampleMap
 
 [/Script/UnrealEd.PersonaOptions]
@@ -60,20 +64,20 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 
 [DetailCustomWidgetExpansion]
 BP_KnightCharacter_C=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
-K2Node_VariableGet=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
+K2Node_VariableGet=
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-CameraComponent=CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Misc,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Camera,CameraComponent.Lens.Lens|ExposureAdvanced,CameraComponent.Lens.Lens|Exposure,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,
+CameraComponent=CameraComponent.Color Grading.Color Grading
 K2Node_VariableSet=
-BoolProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
+BoolProperty=
 
 [EditorStartup]
-LastLevel=/Game/MainMenu/MainMenu
+LastLevel=/Game/TestMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -860,6 +864,27 @@ REINST_BP_KnightCharacter_C_265.Rendering=True
 REINST_BP_KnightCharacter_C_265.Replication=True
 REINST_BP_KnightCharacter_C_265.Input=True
 REINST_BP_KnightCharacter_C_265.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+AnimationGraph.Graph=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_BlendListByBool.Config=True
+AnimGraphNode_BlendListByBool.BlendType=True
+AnimGraphNode_BlendListByBool.Option=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+BoneProxy.Transform=True
+BoneProxy.Bone=True
+BoneProxy.Reference Transform=True
+AnimGraphNode_ModifyBone.SkeletalControl=True
+AnimGraphNode_ModifyBone.Translation=True
+AnimGraphNode_ModifyBone.Rotation=True
+AnimGraphNode_ModifyBone.Scale=True
+AnimGraphNode_ModifyBone.Settings=True
+AnimGraphNode_ModifyBone.Performance=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -953,6 +978,11 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
 ActorComponent=
 REINST_BP_KnightCharacter_C_121="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base=
+K2Node=
+EdGraphNode=
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
