--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -17,7 +17,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=2
+PlayNumberOfClients=1
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -31,6 +31,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@COMPUTER
 LastExecutedLaunchName=COMPUTER
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=0,Y=0)
@@ -64,7 +65,7 @@ AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeInd
 
 [DetailCustomWidgetExpansion]
 BP_KnightCharacter_C=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
-K2Node_VariableGet=
+K2Node_VariableGet=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FloatProperty=BP_KnightCharacter_C.Physics.ConstraintsGroup,BP_KnightCharacter_C.Rendering.TextureStreaming,BP_KnightCharacter_C.Rendering.LOD,
@@ -77,7 +78,7 @@ BoolProperty=
 LastLevel=/Game/TestMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -885,6 +886,27 @@ AnimGraphNode_ModifyBone.Rotation=True
 AnimGraphNode_ModifyBone.Scale=True
 AnimGraphNode_ModifyBone.Settings=True
 AnimGraphNode_ModifyBone.Performance=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+REINST_BP_KnightCharacter_C_144.None=True
+REINST_BP_KnightCharacter_C_144.Tick=True
+REINST_BP_KnightCharacter_C_144.Character=True
+REINST_BP_KnightCharacter_C_144.Camera=True
+REINST_BP_KnightCharacter_C_144.Pawn=True
+REINST_BP_KnightCharacter_C_144.Rendering=True
+REINST_BP_KnightCharacter_C_144.Replication=True
+REINST_BP_KnightCharacter_C_144.Input=True
+REINST_BP_KnightCharacter_C_144.Actor=True
+REINST_BP_KnightCharacter_C_159.None=True
+REINST_BP_KnightCharacter_C_159.Tick=True
+REINST_BP_KnightCharacter_C_159.Character=True
+REINST_BP_KnightCharacter_C_159.Camera=True
+REINST_BP_KnightCharacter_C_159.Pawn=True
+REINST_BP_KnightCharacter_C_159.Rendering=True
+REINST_BP_KnightCharacter_C_159.Replication=True
+REINST_BP_KnightCharacter_C_159.Input=True
+REINST_BP_KnightCharacter_C_159.Actor=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -958,6 +980,8 @@ None=======
 /Game/PolygonKnights/Meshes/Characters/SK_Character_Knight_03_PhysicsAsset.SK_Character_Knight_03_PhysicsAsset=1
 /Game/Mat_ground1.Mat_ground1=1
 /Game/Char/Knight/Character_Anim.Character_Anim=1
+/Game/Char/Knight/Animations/ThrowIdle.ThrowIdle=1
+/Game/Char/Knight/BP_KnightCharacter.BP_KnightCharacter:EventGraph.K2Node_InputKey_44=1
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -983,6 +1007,7 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
+REINST_BP_KnightCharacter_C_66="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1758,5 +1783,10 @@ AI_Piggy_C.Character Movement: NavMesh Movement=True
 
 [MaterialEditor]
 PrimType=1
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
 
 
